# pg_moonlink

./: Cargo.toml  temp.rs
.github/workflows/: ci.yml
pr-preview/pr-2/html/: index.html
pr-preview/pr-2/html/coverage/home/runner/work/pg_moonlink/pg_moonlink/src/moonlink/src/: error.rs.html  table_handler.rs.html
pr-preview/pr-2/html/coverage/home/runner/work/pg_moonlink/pg_moonlink/src/moonlink_backend/src/: error.rs.html  lib.rs.html
rust/moonlink/: Cargo.toml
rust/moonlink/src/: main.rs  sink.rs  table_handler.rs
rust/moonlink/src/replication/: mod.rs
rust/moonlink/src/replication/clients/: postgres.rs
rust/moonlink/src/replication/conversions/: cdc_event.rs  mod.rs  table_row.rs  text.rs
rust/moonlink/src/replication/pipeline/: mod.rs
rust/moonlink/src/replication/pipeline/batching/: data_pipeline.rs
rust/moonlink/src/replication/pipeline/sinks/: mod.rs  sink.rs
rust/moonlink/src/replication/pipeline/sources/: mod.rs  postgres.rs
rust/moonlink/src/storage/: data_batches.rs  disk_slice.rs  mem_slice.rs  mooncake_table.rs
rust/moonlink/src/storage/index/: test_in_memory_index.rs
rust/moonlink/src/storage/mooncake_table/: mod.rs
rust/moonlink_connectors/src/postgres/: sink.rs
src/moonlink/src/: error.rs  lib.rs  profiling.rs  table_handler.rs
src/moonlink/src/storage/: mooncake_table.rs
src/moonlink/src/storage/iceberg/: catalog_utils.rs  iceberg_snapshot.rs  iceberg_table_event_manager.rs  iceberg_table_manager.rs
src/moonlink/src/storage/index/: hash_index.rs  persisted_bucket_hash_map.rs
src/moonlink/src/storage/mooncake_table/: data_batches.rs  disk_slice.rs  snapshot.rs  test_utils.rs
src/moonlink/src/table_handler/: test_utils.rs  tests.rs
src/moonlink/src/union_read/: read_state.rs  read_state_manager.rs
src/moonlink_backend/src/: error.rs  lib.rs
src/moonlink_connectors/src/: lib.rs  pg_replicate.rs  postgres.rs  replication_connection.rs  replication_manager.rs
src/moonlink_connectors/src/pg_replicate/: moonlink_sink.rs  pipeline.rs  postgres_source.rs  table.rs  table_init.rs  util.rs
src/moonlink_connectors/src/pg_replicate/clients/: postgres.rs
src/moonlink_connectors/src/pg_replicate/conversions/: cdc_event.rs  table_row.rs  text.rs
src/moonlink_connectors/src/pg_replicate/pipeline/batching/: data_pipeline.rs  stream.rs
src/moonlink_connectors/src/pg_replicate/pipeline/sources/: postgres.rs
src/moonlink_connectors/src/postgres/: sink.rs
(+55 files in other folders)
