[workspace]
members = [
    "rust/moonlink",
    "rust/moonlink_connectors",
    "rust/pg_moonlink_test",
    "rust/pg_mooncake_test_fn",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
async-trait = "0.1"

pg_replicate = { git = "https://github.com/Mooncake-Labs/pg_replicate", rev = "6185151c9746cece94fa2bb3792bbd536ac35b93" }
tokio-postgres = { git = "ssh://git@github.com/Mooncake-Labs/rust-postgres.git", package = "tokio-postgres" }
tokio.version = "1.38"
arrow = "54.2.1"
thiserror = "2.0.12"
parquet = "54.2.1"
tempfile = "3.18.0"
uuid = "1.15.1"
futures = "0.3.31"
multimap = "0.10.0"
chrono = "0.4.40"
num-traits = "0.2.19"
